# auth-service

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: dev-feature-pr.yml  dev.yml
.run/: Unittests in bin.run.xml  Unittests in tests.run.xml
src/lambdas/: create_admin_user.py  event_handler.py  login.py  refresh_token.py  set_user_password.py
src/layers/: api_responses.py  auth_cognito.py  auth_interface.py  auth_service.py  containers.py  entities.py  events.py  exceptions.py  secrets.py  security.py  services.py  testing.py
tests/_resources/cognito/: cognito#respond_to_auth_challenge.json
tests/_resources/events/: event#create_admin_user.json  event#login.json  event#refresh_token.json  event#set_user_password.json  event.json
tests/lambdas/: test_create_admin_user.py  test_login.py  test_refresh_token.py  test_set_new_user_password.py
