[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["Adrian Meraz <adrian@rydeas.com>"]
readme = "README.md"

[tool.poetry.dependencies]
coverage = "^7.6.4"
python = "~3.12"
pyjwt = "^2.9.0"
py-aws-core = "~0.2"
pydantic = {extras = ["email"], version = "^2.9.2"}
dependency-injector = "^4.42.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
